1.新增兩層式表單 2.設置按鈕事件

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
         <activity
             android:name=".activity.BottleListActivity"
             android:screenOrientation="portrait" />
-
+        <activity
+            android:name=".activity.BottleDoubleListActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".temporarydevelop.TemporaryDevelopActivity"
             android:screenOrientation="portrait">
