--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,14 +16,15 @@
             android:name=".activity.SignUpActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.AddBottleActivity"
-            android:screenOrientation="portrait" />
-
-        <activity
             android:name=".activity.BottleListActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.BottleDoubleListActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.AddDeviceActivity"
+            android:screenOrientation="portrait" />
+            android:name=".activity.FeedBackActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".temporarydevelop.TemporaryDevelopActivity"
