--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,9 +41,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".temporarydevelop.TemporaryDevelopActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" />
 
-        </activity>
+        <service android:name=".service.NotificationService" />
     </application>
 
 </manifest>
